sample/retrieveUnpackaged/objects/reCAPTCHA__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Public_Key__c</fullName>
        <label>Public Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Key__c</fullName>
        <label>Secret Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>baseURL__c</fullName>
        <label>baseURL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>reCAPTCHA</label>
</CustomObject>